# gnofract4d

./: .dockerignore  .gitignore  .travis.yml  debug-setup.sh  pylintrc  pylintrc_new
examples/: README.md
examples/cpp/: Dockerfile
examples/python/: helpers.py  mandelbrot_output_c.py  mandelbrot_output_png.py  mandelbrot_output_so.py  pylintrc  simple_mandelbrot.py
fract4d/: colorizer.py  fractal.py
fract4d/c/test/: CMakeLists.txt  Dockerfile  run.sh  test.cpp
fract4d/fract4d_new/tests/: test_fract4dc_controller.py
fract4d/fract4d_new/tests/helpers/: shared_constants.py
fract4d/tests/: test_fctutils.py  test_formsettings.py
fract4d_compiler/: fc.py
fract4dgui/: gtkfractal.py
